# object-detection-yolov3

./: .gitignore  CMakeLists.txt  README.md  getModelConfig.sh
include/: Draw.h  MediaLoader.h  YoloNet.h
src/: Draw.cpp  MediaLoader.cpp  ObjectDetection.cpp  YoloNet.cpp
